# onion-or-not-the-onion-drinking-game-2

./: .dockerignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: audit.yml  general.yml
client/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  index.html
client/assets/: correct.LICENSE  fast-forward.LICENSE  incorrect.LICENSE  index.css  old.css  pencil.LICENSE  play.css  style.css  style.scss
client/docker/: default.conf  security-headers.conf
client/locales/de/: main.ftl
client/locales/en-US/: main.ftl
client/src/: lib.rs  main.rs  utils.rs
client/src/components/: footer.rs  header.rs  join_game.rs  locale.rs  messages.rs  mod.rs  player_name_type_exit_headline.rs  playerlist.rs  svg.rs
client/src/routes/: game.rs  index.rs  lobby.rs  mod.rs
client/src/routes/play/: aftermath.rs  connecting.rs  game.rs  lobby.rs  mod.rs  play_state.rs
dev-reverse-proxy/docker/: default.conf.template
githooks/: pre-commit.lints  pre-commit.nolints  pre-commit.pedantic
reddit-gatherer/: Cargo.toml  README.md  deny.toml
reddit-gatherer/src/: main.rs  response_model.rs
reverse-proxy/: Dockerfile
reverse-proxy/docker/: default.conf.template
server/: Cargo.toml  Dockerfile  README.md  build.rs  deny.toml
server/assets/: nottheonion.best.max2000.ron  nottheonion.top.max2000.ron  theonion.best.max2000.ron  theonion.top.max2000.ron
server/src/: configuration.rs  data.rs  data_model_bridge.rs  lib.rs  main.rs  model.rs  startup.rs  telemetry.rs
server/src/model/: mod.rs
server/src/routes/: distribution.rs  index.rs  mod.rs  websocket.rs
server/src/routes/game/: client.rs  from_lobby_message.rs  lobbies_storage.rs  lobby.rs  mod.rs  to_lobby_message.rs
shared-library/: .gitignore  Cargo.toml  README.md
shared-library/src/: lib.rs
shared-library/src/model/: game.rs  network.rs
