[package]
name = "onion-or-not-the-onion-drinking-game-2-client"
version = "0.1.0"
authors = ["Thimo \"Tiquthon\" Neumann <tiquthon@gmail.com>"]
edition = "2021"
description = "A web game to play with your friends. Guess, be surprised, drink! This is the client part."
readme = "README.md"
repository = "https://github.com/tiquthon/onion-or-not-the-onion-drinking-game-2"
keywords = ["party", "game", "web", "onion", "drinking", "client"]
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "onion-or-not-the-onion-drinking-game-2-client"
path = "src/main.rs"

[dependencies]
fluent-templates = "0.8"
futures-util = "0.3"
unic-langid = "0.9"

log = "0.4"
wasm-logger = "0.2"

gloo-net = "0.2"
web-sys = { version = "0.3", features = [] }
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
