[package]
name = "onion-or-not-the-onion-drinking-game-2-client"
version = "0.1.0"
authors = ["Thimo \"Tiquthon\" Neumann <tiquthon@gmail.com>"]
edition = "2021"
description = "A web game to play with your friends. Guess, be surprised, drink! This is the client part."
readme = "README.md"
repository = "https://github.com/tiquthon/onion-or-not-the-onion-drinking-game-2"
keywords = ["party", "game", "web", "onion", "drinking", "client"]
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "onion-or-not-the-onion-drinking-game-2-client"
path = "src/main.rs"

[dependencies]
# ui framework
yew = { version = "0.20", features = ["csr"] }

# own libraries
onion-or-not-the-onion-drinking-game-2-shared-library = { path = "../shared-library", features = ["wasm"] }

# web framework
gloo-net = "0.2"
gloo-storage = "0.2"
gloo-timers = { version = "0.2", features = ["futures"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-timer = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "SubmitEvent",
    "Event",

    "Window",
    "Navigator"
] }

# network transport
bincode = "1"

# localisation
fluent-templates = "0.8"
unic-langid = "0.9"

# logging
log = "0.4"
wasm-logger = "0.2"

# error handling
anyhow = "1"

# various
chrono = { version = "0.4", features = ["wasmbind"] }
futures-util = "0.3"
itertools = "0.10"
tokio = { version = "1", default-features = false, features = ["sync"] }
urlencoding = "2"
