[package]
name = "onion-or-not-the-onion-drinking-game-2-client"
version = "0.1.0"
authors = ["Thimo \"Tiquthon\" Neumann <tiquthon@gmail.com>"]
edition = "2021"
description = "A web game to play with your friends. Guess, be surprised, drink! This is the client part."
readme = "README.md"
repository = "https://github.com/tiquthon/onion-or-not-the-onion-drinking-game-2"
keywords = ["party", "game", "web", "onion", "drinking", "client"]
publish = false
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "onion-or-not-the-onion-drinking-game-2-client"
path = "src/main.rs"

[dependencies]
# ui framework
yew = { version = "0.20" }

# own libraries
onion-or-not-the-onion-drinking-game-2-shared-library = { path = "../shared-library", features = ["wasm"] }

# web framework
gloo-net = "0.2"
gloo-storage = "0.2"
gloo-timers = { version = "0.2", features = ["futures"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-timer = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "SubmitEvent",
    "Event",

    "Window",
    "Navigator",
    "Location",
] }

# network transport
bincode = "1"

# localisation
fluent-templates = "0.8"
unic-langid = "0.9"

# logging
log = "0.4"
wasm-logger = "0.2"

# error handling
anyhow = "1"

# various
chrono = { version = "0.4", features = ["wasmbind"] }
futures-util = "0.3"
itertools = "0.10"
tokio = { version = "1", default-features = false, features = ["sync"] }
urlencoding = "2"
once_cell = "1"
tap = "1"

[build-dependencies]
# ui version
last-git-commit = { version = "0.2", optional = true }
chrono = { version = "0.4" }

[features]
default = ["version_in_ui"]
render = ["yew/csr"]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]
version_in_ui = ["last-git-commit"]

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
