[package]
name = "onion-or-not-the-onion-drinking-game-2-server"
version = "0.1.0"
authors = ["Thimo \"Tiquthon\" Neumann <tiquthon@gmail.com>"]
edition = "2021"
description = "A web game to play with your friends. Guess, be surprised, drink!"
readme = "README.md"
repository = "https://github.com/tiquthon/onion-or-not-the-onion-drinking-game-2"
keywords = ["party", "game", "web", "onion", "drinking"]
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "onion-or-not-the-onion-drinking-game-2-server"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-ws = "0.2"
futures-util = "0.3"
