[package]
name = "onion-or-not-the-onion-drinking-game-2-server"
version = "0.1.0"
authors = ["Thimo \"Tiquthon\" Neumann <tiquthon@gmail.com>"]
edition = "2021"
description = "A web game to play with your friends. Guess, be surprised, drink! This is the server part."
readme = "README.md"
repository = "https://github.com/tiquthon/onion-or-not-the-onion-drinking-game-2"
keywords = ["party", "game", "web", "onion", "drinking", "server"]
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "onion-or-not-the-onion-drinking-game-2-server"
path = "src/main.rs"

[dependencies]
# web framework
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
actix-ws = "0.2"

# own libraries
onion-or-not-the-onion-drinking-game-2-shared-library = { path = "../shared-library" }

# logging in an async context
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.1"
tracing-actix-web = "0.7"

# working with futures
futures-util = "0.3"

# configuration
config = { version = "0.13", default-features = false, features = ["yaml"] }

# security
secrecy = { version = "0.8", features = ["serde"] }

# error handling
anyhow = "1"
thiserror = "1"

# serialisation
serde = { version = "1", features = ["derive"] }

# various
chrono = "0.4"
lazy_static = "1"
rand = "0.8"
ron = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
